Made some small (breaking) changes to the OpenAPI spec (without bumping the verison). + minor LobbiesController work.
